tests/parsing/smtlib/v2.6/errors/115_command_bad_name_1.expected
File "tests/parsing/smtlib/v2.6/errors/115_command_bad_name_1.smt2", line 1, character 1-2:
1 | (_)
     ^
Error while parsing a command, read the reserved word '_',
      but expected a command name.
